--- a/StepUpApp2/app/src/main/AndroidManifest.xml
+++ b/StepUpApp2/app/src/main/AndroidManifest.xml
@@ -7,19 +7,25 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-feature android:name="android.hardware.camera" android:required="false"/> <!--Establecemos camara opcional dependiendo del telefono-->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+
 
     <application
+        android:name=".main.LayerApplication"
         android:allowBackup="true"
         android:icon="@drawable/logotipo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logotipo"
         android:supportsRtl="true"
         android:theme="@style/Theme.StepUpApp">
+
         <activity
             android:name=".main.GuardarUbicacionActivity"
             android:exported="false" />
